Update installation procedures, add resources for Anaconda and git

--- a/1.16 Installation/1.16_Installation.md
+++ b/1.16 Installation/1.16_Installation.md
@@ -4,7 +4,21 @@
 0. (follow along on YouTube for [Windows](https://www.youtube.com/watch?v=3r1TRUAM5rY) and [Linux/Mac](https://www.youtube.com/watch?v=cpMkdjHXJS4):)
 1. Download [latest Anaconda release](https://www.anaconda.com/download/#macos) (*for Python 3*)
 2. Follow installation procedures
-3. In terminal ('Anaconda Prompt' for PC's), create the 'tds' environment.
+3. In terminal ('Anaconda Prompt' for Windows), create the 'tds' environment.
+
+   - Create a new environment by entering:
+      
+      `conda create --name tds python=3.6`
+  
+   - Activate environment: (You should see 'tds' on the command line)
+      
+      `conda activate tds`  (Windows)
+
+      `source activate tds' (Linux/Mac)
+
+   - Install python packages used in workshop:
+
+      `conda install numpy scikit-learn opencv matplotlib keras tensorflow jupyter`
 
 # Git Setup
 1. Download [latest git client](https://git-scm.com/downloads)
