--- a/1.16 Installation/1.16_Installation.md
+++ b/1.16 Installation/1.16_Installation.md
@@ -14,7 +14,7 @@
       
       `conda activate tds`  (Windows)
 
-      `source activate tds' (Linux/Mac)
+      `source activate tds` (Linux/Mac)
 
    - Install python packages used in workshop:
 
