Changes after 1.16 workshop

--- a/1.16 Installation/1.16_Installation.md
+++ b/1.16 Installation/1.16_Installation.md
@@ -2,7 +2,7 @@
 
 # Environment Setup 
 0. (follow along on YouTube for [Windows](https://www.youtube.com/watch?v=3r1TRUAM5rY) and [Linux/Mac](https://www.youtube.com/watch?v=cpMkdjHXJS4):)
-1. Download [latest Anaconda release](https://www.anaconda.com/download/#macos) (*for Python 3*)
+1. Download [latest Anaconda release](https://www.anaconda.com/download/) (*for Python 3*)
 2. Follow installation procedures
 3. In terminal ('Anaconda Prompt' for Windows), create the 'tds' environment.
 
@@ -25,7 +25,7 @@
 2. Follow installation procedures
 
 # Download Repo:
-1. Open terminal ('git bash' for Windows)
+1. Open 'terminal' ('git bash' for Windows)
 2. Create a folder titled 'TDS' by entering `mkdir TDS`
 3. Go inside TDS folder by entering `cd TDS`
 4. Clone the repository by entering `git clone https://github.com/zachandfox/19sp-tds-nn`
