Include reminder about activating environment

--- a/1.23 Git/1.23_Git.md
+++ b/1.23 Git/1.23_Git.md
@@ -12,6 +12,11 @@ Tutorial Videos:
 - You make changes and  commit them  on your local branch
 - Repeat
 
+## REMEMBER: Activate your environment:
+- In 'terminal' (Linux/Mac): `source activate tds`
+- In 'Anaconda Prompt` (Windows): `conda activate tds`
+
+
 ## Git (Main Uses)
 [Cheat Sheet](https://www.git-tower.com/blog/git-cheat-sheet/)
 
