Add additional resources after 1.23 workshop

--- a/1.23 Git/1.23_Git.md
+++ b/1.23 Git/1.23_Git.md
@@ -1,9 +1,9 @@
 # 1.23 Git
 
 ## Navigating Terminal/Anaconda Prompt/Git Bash
-Tutorial Videos: 
 - `pwd` => **P**rint **w**orking **d**irectory (<=> display current location)
-- `ls` => **L**i**s**t contents of current directory
+- `ls` => **L**i**s**t contents of current directory (Linux-based)
+- `dir` => **Dir**ectory (Windows equivalent of `ls`)
 - `cd <specified directory>` => **C**hange **d**irectory to <specified directory> within working directory
 
 ## Our Workflow:
@@ -19,6 +19,9 @@ Tutorial Videos:
 
 ## Git (Main Uses)
 [Cheat Sheet](https://www.git-tower.com/blog/git-cheat-sheet/)
+
+### Inspect status of repository
+To show the un-committed changes in your repository (after you've made changes within the repo), use `git status`
 
 ### Clone (Copy) a repo from github
 - Copy URL of repo of interest
